# change-isolation-action

./: .pre-commit-config.yaml  README.md  REUSE.toml  action.yaml  change_isolation.py  pyproject.toml
.github/workflows/: testing.yaml
tests/: test_change_isolation.py
